finished with the css and part of the readme

--- a/css/main.css
+++ b/css/main.css
@@ -95,10 +95,6 @@
         align-items: center;
         flex-direction: column;
     }
-
-    main {
-    }
-
   /* Classes, ids, etc*/
 
   .nav-container {
@@ -230,6 +226,10 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+  }
+
+  .img-wrapper {
+    width: 100%;
   }
 
   .hero-img {
@@ -393,7 +393,7 @@
 
     .nav-list {
       display: flex;
-      justify-content: space-between;
+      align-items: center;
       list-style: none;
       padding-left: 10px;
       margin: 0;
@@ -404,8 +404,16 @@
       padding-right: 10px;
     }
 
+    .listed-item {
+      height: 25.19px;
+    }
+
     .nav-list li a {
       text-decoration: none;
+      color: hsl(0, 0%, 41%);
+    }
+
+    .nav-list li a:hover {
       color: black;
     }
 
@@ -428,9 +436,10 @@
 
     .show-nested-list {
       position: absolute;
-      background-color: white;
+      background-color: lightgray;
       padding: 10px;
       border-radius: 5px;
+      box-shadow: -3px 5px rgba(0, 0, 0, .1);
     }
 
     .content-wrapper {
@@ -479,11 +488,67 @@
 
   @media only screen and (min-width: 1440px) {
     .nav-container {
-      width: 1296px;
+      width: 1400px;
     }
 
-    
+    .nav-list {
+      padding-left: 60px;
+    }
 
+    .listed-item,
+    .item {
+      padding-right: 40px;
+    }
+
+    .buttons {
+      margin-left: 492px;
+    }
+
+    .buttons button:nth-child(1) {
+      margin-right: 40px;
+    }
+
+    .content-wrapper {
+      width: 1400px;
+    }
+
+    .hero-img {
+      width: 480px;
+      height: 910px;
+    }
+
+    .text {
+      width: 480px;
+      padding: 0;
+      margin-bottom: 120px;
+    }
+
+    .text h1 {
+      font-size: 4em;
+    }
+
+    .text p {
+      font-size: 1.1em;
+      margin-bottom: 2em;
+    }
+
+    .learn-more {
+      margin: 0;
+    }
+
+    .learn-more-button {
+      padding: 20px 35px;
+    }
+
+    .company-list {
+      width: 480px;
+      padding: 0;
+      transform: translate(0, 375%);
+    }
+
+    .company img {
+      width: 80px;
+    }
   }
   
   @media print,
